Improved Solution template